[package]
name = "vpn-switcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"